@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: render.c,v 1.70 2008/01/17 22:28:05 Superfly_Jon Exp $
+ * $Id: render.c,v 1.71 2008/01/20 23:38:08 c_anthon Exp $
  */
 
 #include "config.h"
@@ -660,7 +660,7 @@ static void RenderBorder( unsigned char *puch, int nStride, int x0, int y0,
 static void RenderFramePainted( renderdata *prd, unsigned char *puch,
 				int nStride ) {
     int i;
-    uint ix;
+    unsigned int ix;
     float x, z, cos_theta, diffuse, specular;
 	unsigned char *colours = (unsigned char*) g_alloca(4 * 3 * prd->nSize * sizeof(unsigned char));
 
@@ -1575,7 +1575,7 @@ static unsigned char BoardPixel( renderdata *prd, int i, int antialias,
 
 extern void RenderBoard( renderdata *prd, unsigned char *puch, int nStride ) {
 
-    uint ix, iy;
+    unsigned int ix, iy;
     int antialias;
 
 #define BUF( y, x, i ) ( puch[ (y) * nStride + (x) * 3 + (i) ] )
@@ -1853,7 +1853,7 @@ extern void RenderChequers( renderdata *prd, unsigned char *puch0,
 extern void RenderChequerLabels( renderdata *prd, unsigned char *puch,
 				 int nStride ) {
     int i;
-    uint ip;
+    unsigned int ip;
 #if HAVE_FREETYPE
     FT_Face ftf;
     FT_Glyph aftg[ 10 ];
@@ -2181,7 +2181,7 @@ static void RenderResignFaces( renderdata *prd, unsigned char *puch,
 extern void RenderDice( renderdata *prd, unsigned char *puch0,
 			unsigned char *puch1, int nStride ) {
     
-    uint ix, iy;
+    unsigned int ix, iy;
     int in, fx, fy, i;
     float x, y, x_loop, y_loop, diffuse, specular_x, specular_o, cos_theta,
 	x_norm, y_norm, z_norm;
@@ -2273,7 +2273,7 @@ extern void RenderDice( renderdata *prd, unsigned char *puch0,
 extern void RenderPips( renderdata *prd, unsigned char *puch0,
 			unsigned char *puch1, int nStride ) {
 
-    uint ix, iy;
+    unsigned int ix, iy;
     int in, fx, fy, i;
     float x, y, z, x_loop, y_loop, diffuse, specular_x, specular_o, cos_theta,
 	dice_top[ 2 ][ 3 ];
