@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: sgf.c,v 1.118 2008/01/16 16:16:45 Superfly_Jon Exp $
+ * $Id: sgf.c,v 1.119 2008/01/20 23:38:08 c_anthon Exp $
  */
 
 #include "config.h"
@@ -1856,7 +1856,7 @@ static void WriteMoveAnalysis(FILE * pf, int fPlayer, movelist * pml,
 			      int iMove)
 {
 
-    uint i;
+    unsigned int i;
     gchar buffer[G_ASCII_DTOSTR_BUF_SIZE];
 
     fprintf(pf, "A[%d]", iMove);
